gen/JassParser.js
// Generated from /Users/nazarpunk/IdeaProjects/ANTLR/jass/JassParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import JassParserListener from './JassParserListener.js';
import JassParserVisitor from './JassParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class JassParser extends antlr4.Parser {

    static grammarFileName = "JassParser.g4";
    static literalNames = [ null, "'and'", "'array'", "'boolean'", "'code'", 
                            "'call'", "'constant'", "'debug'", "'else'", 
                            "'elseif'", "'endfunction'", "'endif'", "'endloop'", 
                            "'endglobals'", "'extends'", "'exitwhen'", "'false'", 
                            "'function'", "'globals'", "'handle'", "'if'", 
                            "'integer'", "'local'", "'loop'", "'native'", 
                            "'not'", "'nothing'", "'null'", "'or'", "'real'", 
                            "'returns'", "'return'", "'set'", "'string'", 
                            "'takes'", "'then'", "'true'", "'type'", "','", 
                            "'=='", "'='", "'!='", "'<='", "'<'", "'>='", 
                            "'>'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", 
                            "'['", "']'" ];
    static symbolicNames = [ null, "AND", "ARRAY", "BOOLEAN", "CODE", "CALL", 
                             "CONSTANT", "DEBUG", "ELSE", "ELSEIF", "ENDFUNCTION", 
                             "ENDIF", "ENDLOOP", "ENDGLOBALS", "EXTENDS", 
                             "EXITWHEN", "FALSE", "FUNCTION", "GLOBALS", 
                             "HANDLE", "IF", "INTEGER", "LOCAL", "LOOP", 
                             "NATIVE", "NOT", "NOTHING", "NULL", "OR", "REAL", 
                             "RETURNS", "RETURN", "SET", "STRING", "TAKES", 
                             "THEN", "TRUE", "TYPE", "COMMA", "EQ_EQ", "EQ", 
                             "NEQ", "LT_EQ", "LT", "GT_EQ", "GT", "PLUS", 
                             "MINUS", "MUL", "DIV", "LPAREN", "RPAREN", 
                             "LBRACK", "RBRACK", "ID", "INTVAL", "STRVAL", 
                             "RAWVAL", "HEXVAL", "REALVAL", "WS", "NL", 
                             "LINE_COMMENT" ];
    static ruleNames = [ "root", "typeDef", "typeName", "typeNameBase", 
                         "var", "glob", "gvar", "argList", "funCall", "param", 
                         "paramList", "funTake", "funRet", "fun", "funHead", 
                         "funStmt", "funName", "nativ", "stmt", "lvarStmt", 
                         "setStmt", "callStmt", "returnStmt", "ifStmt", 
                         "elseIfStmt", "elseStmt", "loopStmt", "exitWhenStmt", 
                         "expr", "prim", "str", "arrayAccess", "funcAsCode" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JassParser.ruleNames;
        this.literalNames = JassParser.literalNames;
        this.symbolicNames = JassParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 28:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 19);
    		case 1:
    			return this.precpred(this._ctx, 18);
    		case 2:
    			return this.precpred(this._ctx, 17);
    		case 3:
    			return this.precpred(this._ctx, 16);
    		case 4:
    			return this.precpred(this._ctx, 10);
    		case 5:
    			return this.precpred(this._ctx, 9);
    		case 6:
    			return this.precpred(this._ctx, 8);
    		case 7:
    			return this.precpred(this._ctx, 7);
    		case 8:
    			return this.precpred(this._ctx, 6);
    		case 9:
    			return this.precpred(this._ctx, 5);
    		case 10:
    			return this.precpred(this._ctx, 4);
    		case 11:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	root() {
	    let localctx = new RootContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JassParser.RULE_root);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 6)) & ~0x1f) === 0 && ((1 << (_la - 6)) & 2147751937) !== 0)) {
	            this.state = 70;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 66;
	                this.typeDef();
	                break;

	            case 2:
	                this.state = 67;
	                this.nativ();
	                break;

	            case 3:
	                this.state = 68;
	                this.glob();
	                break;

	            case 4:
	                this.state = 69;
	                this.fun();
	                break;

	            }
	            this.state = 74;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 75;
	        this.match(JassParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeDef() {
	    let localctx = new TypeDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JassParser.RULE_typeDef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(JassParser.TYPE);
	        this.state = 78;
	        this.typeName();
	        this.state = 79;
	        this.match(JassParser.EXTENDS);
	        this.state = 80;
	        this.typeNameBase();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeName() {
	    let localctx = new TypeNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, JassParser.RULE_typeName);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 539492376) !== 0) || _la===33 || _la===54)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeNameBase() {
	    let localctx = new TypeNameBaseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JassParser.RULE_typeNameBase);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this.typeName();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	var_() {
	    let localctx = new VarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JassParser.RULE_var);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.typeName();
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 87;
	            this.match(JassParser.ARRAY);
	        }

	        this.state = 90;
	        this.match(JassParser.ID);
	        this.state = 93;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===40) {
	            this.state = 91;
	            this.match(JassParser.EQ);
	            this.state = 92;
	            this.expr(0);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	glob() {
	    let localctx = new GlobContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, JassParser.RULE_glob);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.match(JassParser.GLOBALS);
	        this.state = 99;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 539492440) !== 0) || _la===33 || _la===54) {
	            this.state = 96;
	            this.gvar();
	            this.state = 101;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 102;
	        this.match(JassParser.ENDGLOBALS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	gvar() {
	    let localctx = new GvarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, JassParser.RULE_gvar);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 104;
	            this.match(JassParser.CONSTANT);
	        }

	        this.state = 107;
	        this.var_();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argList() {
	    let localctx = new ArgListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JassParser.RULE_argList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.expr(0);
	        this.state = 114;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 110;
	            this.match(JassParser.COMMA);
	            this.state = 111;
	            this.expr(0);
	            this.state = 116;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funCall() {
	    let localctx = new FunCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JassParser.RULE_funCall);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.funName();
	        this.state = 118;
	        this.match(JassParser.LPAREN);
	        this.state = 120;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 167968768) !== 0) || ((((_la - 36)) & ~0x1f) === 0 && ((1 << (_la - 36)) & 16546817) !== 0)) {
	            this.state = 119;
	            this.argList();
	        }

	        this.state = 122;
	        this.match(JassParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	param() {
	    let localctx = new ParamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, JassParser.RULE_param);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        this.typeName();
	        this.state = 125;
	        this.match(JassParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paramList() {
	    let localctx = new ParamListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, JassParser.RULE_paramList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.param();
	        this.state = 132;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 128;
	            this.match(JassParser.COMMA);
	            this.state = 129;
	            this.param();
	            this.state = 134;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funTake() {
	    let localctx = new FunTakeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, JassParser.RULE_funTake);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(JassParser.TAKES);
	        this.state = 138;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	            this.state = 136;
	            this.match(JassParser.NOTHING);
	            break;
	        case 3:
	        case 4:
	        case 19:
	        case 21:
	        case 29:
	        case 33:
	        case 54:
	            this.state = 137;
	            this.paramList();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funRet() {
	    let localctx = new FunRetContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, JassParser.RULE_funRet);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this.match(JassParser.RETURNS);
	        this.state = 143;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	            this.state = 141;
	            this.match(JassParser.NOTHING);
	            break;
	        case 3:
	        case 4:
	        case 19:
	        case 21:
	        case 29:
	        case 33:
	        case 54:
	            this.state = 142;
	            this.typeName();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fun() {
	    let localctx = new FunContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, JassParser.RULE_fun);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 145;
	            this.match(JassParser.CONSTANT);
	        }

	        this.state = 148;
	        this.match(JassParser.FUNCTION);
	        this.state = 149;
	        this.funHead();
	        this.state = 150;
	        this.funStmt();
	        this.state = 151;
	        this.match(JassParser.ENDFUNCTION);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funHead() {
	    let localctx = new FunHeadContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, JassParser.RULE_funHead);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this.funName();
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===34) {
	            this.state = 154;
	            this.funTake();
	        }

	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===30) {
	            this.state = 157;
	            this.funRet();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funStmt() {
	    let localctx = new FunStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, JassParser.RULE_funStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2700640440) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 4194307) !== 0)) {
	            this.state = 160;
	            this.stmt();
	            this.state = 165;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funName() {
	    let localctx = new FunNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, JassParser.RULE_funName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 166;
	        this.match(JassParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nativ() {
	    let localctx = new NativContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, JassParser.RULE_nativ);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 169;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===6) {
	            this.state = 168;
	            this.match(JassParser.CONSTANT);
	        }

	        this.state = 171;
	        this.match(JassParser.NATIVE);
	        this.state = 172;
	        this.funHead();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmt() {
	    let localctx = new StmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, JassParser.RULE_stmt);
	    try {
	        this.state = 181;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 174;
	            this.setStmt();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 175;
	            this.callStmt();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 176;
	            this.lvarStmt();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 177;
	            this.returnStmt();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 178;
	            this.ifStmt();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 179;
	            this.loopStmt();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 180;
	            this.exitWhenStmt();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lvarStmt() {
	    let localctx = new LvarStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, JassParser.RULE_lvarStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 184;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===22) {
	            this.state = 183;
	            this.match(JassParser.LOCAL);
	        }

	        this.state = 186;
	        this.var_();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	setStmt() {
	    let localctx = new SetStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, JassParser.RULE_setStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===32) {
	            this.state = 188;
	            this.match(JassParser.SET);
	        }

	        this.state = 193;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 191;
	            this.arrayAccess();
	            break;

	        case 2:
	            this.state = 192;
	            this.match(JassParser.ID);
	            break;

	        }
	        this.state = 195;
	        this.match(JassParser.EQ);
	        this.state = 196;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	callStmt() {
	    let localctx = new CallStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, JassParser.RULE_callStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 199;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 198;
	            this.match(JassParser.DEBUG);
	        }

	        this.state = 209;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 202;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===5) {
	                this.state = 201;
	                this.match(JassParser.CALL);
	            }

	            this.state = 204;
	            this.funCall();
	            break;

	        case 2:
	            this.state = 205;
	            this.match(JassParser.CALL);
	            this.state = 207;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	            if(la_===1) {
	                this.state = 206;
	                this.funCall();

	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	returnStmt() {
	    let localctx = new ReturnStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, JassParser.RULE_returnStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 211;
	        this.match(JassParser.RETURN);
	        this.state = 213;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
	        if(la_===1) {
	            this.state = 212;
	            this.expr(0);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStmt() {
	    let localctx = new IfStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, JassParser.RULE_ifStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this.match(JassParser.IF);
	        this.state = 216;
	        this.expr(0);
	        this.state = 218;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 217;
	            this.match(JassParser.THEN);
	        }

	        this.state = 225;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2700641208) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 4194307) !== 0)) {
	            this.state = 223;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 3:
	            case 4:
	            case 5:
	            case 7:
	            case 15:
	            case 19:
	            case 20:
	            case 21:
	            case 22:
	            case 23:
	            case 29:
	            case 31:
	            case 32:
	            case 33:
	            case 54:
	                this.state = 220;
	                this.stmt();
	                break;
	            case 9:
	                this.state = 221;
	                this.elseIfStmt();
	                break;
	            case 8:
	                this.state = 222;
	                this.elseStmt();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 227;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 228;
	        this.match(JassParser.ENDIF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseIfStmt() {
	    let localctx = new ElseIfStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, JassParser.RULE_elseIfStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 230;
	        this.match(JassParser.ELSEIF);
	        this.state = 231;
	        this.expr(0);
	        this.state = 233;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 232;
	            this.match(JassParser.THEN);
	        }

	        this.state = 238;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,29,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 235;
	                this.stmt(); 
	            }
	            this.state = 240;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,29,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


